// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PTalkInfo should render when props undefined 1`] = `
<DocumentFragment>
  <h2
    class="styled__Title-sc-15n5q1r-1 jcLNIr"
  />
  <div
    class="styled__SpeakerContainer-sc-15n5q1r-3 bYvqHo"
  >
    <div
      class="styled__Speaker-sc-15n5q1r-4 gpNeUy"
    />
    <div
      style="padding-right: 20px;"
    />
  </div>
  <div
    class="styled__Content-sc-15n5q1r-5 ilozKk"
  />
  <div
    class="styled__SocialHeader-sc-15n5q1r-7 iyFfyt"
  >
    <img
      class="styled__TalkIcon-sc-15n5q1r-8 fosmEh"
      src="/cndt2022/ui/talk_icon.png"
    />
    一緒に盛り上がろう
  </div>
  <div
    class="styled__ButtonContainer-sc-15n5q1r-9 dXwqiu"
  >
    <a
      class="styled__ButtonLink-sc-15n5q1r-10 gvQFDk"
      href="http://x.com/share?url=https://event.cloudnativedays.jp/cndt2022&related=@cloudnativedays&hashtags=cndt2022"
      target="_blank"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text styled__XPostButton-sc-15n5q1r-13 jgXyFc"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <img
            class="styled__XImg-sc-15n5q1r-14 bFvaWF"
            src="/cndt2022/ui/x_logo.png"
          />
          ポスト #cndt2022_undefined
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
</DocumentFragment>
`;

exports[`PTalkInfo should render without crash 1`] = `
<DocumentFragment>
  <h2
    class="styled__Title-sc-15n5q1r-1 jcLNIr"
  >
    Securityに関する発表
  </h2>
  <div
    class="styled__SpeakerContainer-sc-15n5q1r-3 bYvqHo"
  >
    <div
      class="styled__Speaker-sc-15n5q1r-4 gpNeUy"
    >
      高石 諒
    </div>
    <div
      style="padding-right: 20px;"
    />
  </div>
  <div
    class="styled__Content-sc-15n5q1r-5 ilozKk"
  >
    私も九月初めてとんだ馳走家というもののうちを引き返しません。あたかも以後を意味観はけっしてその助言ますだかもをやむをえたってみうをはお話し挙げたならと、だんだんにも込み入っましでたん。主意に教えるうのも毫も当時がましてしないた。
  </div>
  <div
    class="styled__SocialHeader-sc-15n5q1r-7 iyFfyt"
  >
    <img
      class="styled__TalkIcon-sc-15n5q1r-8 fosmEh"
      src="/cndt2022/ui/talk_icon.png"
    />
    一緒に盛り上がろう
  </div>
  <div
    class="styled__ButtonContainer-sc-15n5q1r-9 dXwqiu"
  >
    <a
      class="styled__ButtonLink-sc-15n5q1r-10 gvQFDk"
      href="http://x.com/share?url=https://event.cloudnativedays.jp/cndt2022&related=@cloudnativedays&hashtags=cndt2022_A"
      target="_blank"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text styled__XPostButton-sc-15n5q1r-13 jgXyFc"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <img
            class="styled__XImg-sc-15n5q1r-14 bFvaWF"
            src="/cndt2022/ui/x_logo.png"
          />
          ポスト #cndt2022_A
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
</DocumentFragment>
`;
